MINOR: fix alignment of cms logo to panel title

--- a/admin/scss/_menu.scss
+++ b/admin/scss/_menu.scss
@@ -10,7 +10,7 @@
 .cms-logo-header {
 	background-color: darken($color-dark-bg, 10%);
 	position: relative;
-	padding: $grid-y * 2 8px 0 4px;
+	padding: $grid-y + 1 8px 0 4px;
 	line-height: 24px;
 
 	@include background-image(
